--- a/src/components/NavHeader/nav-header.less
+++ b/src/components/NavHeader/nav-header.less
@@ -2,6 +2,8 @@
 
 .nav-header {
     position: relative;
+    background-color: #FFF;
+    z-index: 9999;
     .std-padding();
 
     line-height: 24px;
