--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -1,4 +1,6 @@
 .edit-main {
+    color: #555;
+    
     padding-top: 100px;
     > * {
         display: block;
@@ -11,5 +13,20 @@
     #my-text-area {
         // padding: 12px 16px;
         height: 400px;
+    }
+
+    .title-edit {
+        input {
+            padding: 12px 14px;
+            font-size: 24px;
+            width: 100%;
+            border-top: none;
+            border-bottom: none;
+            box-sizing: border-box;
+            box-shadow: none;
+
+            border-left: 1px solid #ccc;
+            border-right: 1px solid #ccc;
+        }
     }
 }
