--- a/src/Pages/Home/Doc/doc-file.less
+++ b/src/Pages/Home/Doc/doc-file.less
@@ -32,7 +32,7 @@
         top: 0;
         right: 0;
 
-        opacity: 0;
+        // opacity: 0;
 
         ._width100 {
             // width: 100%;
@@ -40,9 +40,9 @@
         }
     }
 
-    &:hover {
-        .doc-operation {
-            opacity: 1;
-        }
-    }
+    // &:hover {
+    //     .doc-operation {
+    //         opacity: 1;
+    //     }
+    // }
 }
