--- a/src/@ui/mixins.less
+++ b/src/@ui/mixins.less
@@ -5,3 +5,15 @@
     padding: 12px 16px;
 }
 
+.std-popup-main(@width) {
+    box-shadow: 8px 8px;
+    width: @width;
+    background: #FFF;
+    padding: 35px 50px;
+
+    h1 {
+        font-weight: normal;
+        font-size: 24px;
+        margin-bottom: 1em;
+    }
+} 
