--- a/src/components/SideBtn/side-btn.less
+++ b/src/components/SideBtn/side-btn.less
@@ -1,8 +1,9 @@
 @border-color: #DDD;
 
 .side-btn-main {
-    position: absolute;
-    
+    &._absolute {
+        position: absolute;
+    }
     z-index: 600;
 
     ._icon {
@@ -11,6 +12,7 @@
         position: relative;
         z-index: 600;
         height: 2em;
+        line-height: 2em;
     }
     
 
