+ React 真好玩.jpg

--- a/src/Pages/Home/Doc/doc-file.less
+++ b/src/Pages/Home/Doc/doc-file.less
@@ -12,6 +12,13 @@
 
     }
 
+    .fa-cog-icon {
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
     ._left {
         font-size: 24px;
         padding: 0 12px;
