--- a/src/components/ChangePermissionPopup/change-permission-popup.less
+++ b/src/components/ChangePermissionPopup/change-permission-popup.less
@@ -85,6 +85,38 @@
             }
         }
     }
+
+    ._pub-link {
+        line-height: 34px;
+        margin: 16px auto;
+        width: 80%;
+        display: flex;
+        font-size: 0;
+
+        > * {
+            font-size: 14px;
+        }
+        
+        >._text {
+            text-align: left;
+            color: #888;
+            padding: 0 2em;
+            background-color: #DDD;
+            // margin: .5em 0;
+            // padding: .5em 1em;
+            width: 90%;
+            border: 1px solid #DDD;
+        }
+
+        >._copy-btn {
+            cursor: pointer;
+            width: 20%;
+            text-align: center;
+            border: 1px solid #DDD;
+            border-left: none;
+        }
+
+    }
 }
 
 
