--- a/src/components/NavHeader/nav-header.less
+++ b/src/components/NavHeader/nav-header.less
@@ -4,6 +4,11 @@
     position: relative;
     background-color: #FFF;
     z-index: 9999;
+    font-size: 0;
+    
+    > * {
+        font-size: 14px;
+    }
     .std-padding();
 
     line-height: 24px;
