--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -1,68 +1,83 @@
-.edit-main {
-    color: #555;
-    padding-top: 80px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    
-    // padding-top: 100px;
-
-    > * {
-        display: block;
-        margin: 0 auto;
-        width: 500px;
-
-        
-    }
-
-    #my-text-area {
-        // padding: 12px 16px;
-        height: 400px;
-    }
-
-    .title-edit {
-        input {
-            padding: 12px 14px;
-            font-size: 24px;
-            width: 100%;
-            border-top: none;
-            border-bottom: none;
-            box-sizing: border-box;
-            box-shadow: none;
-
-            border-left: 1px solid #ccc;
-            border-right: 1px solid #ccc;
-        }
-    }
-
-    .bottom-btns {
-        position: relative;
+.edit-page {
+    .edit-main {
+        color: #555;
+        padding-top: 80px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
         box-sizing: border-box;
-        border-bottom: 1px solid #ccc;
-        border-left: 1px solid #CCC;
-        border-right: 1px solid #CCC;
-
-        font-size: 0;
-        line-height: 36px;
-        height: 36px;
-
-        > span, .msg {
-            cursor: pointer;
-            display: inline-block;
-            font-size: 18px;
-            padding: 0 .5em;
-            border-right: 1px solid #ccc;
+        
+        // padding-top: 100px;
+    
+        > * {
+            display: block;
+            margin: 0 auto;
+            width: 500px;
+    
+            
         }
+    
+        #my-text-area {
+            // padding: 12px 16px;
+            height: 400px;
+        }
+    
+        .title-edit {
+            input {
+                padding: 12px 14px;
+                font-size: 24px;
+                width: 100%;
+                border-top: none;
+                border-bottom: none;
+                box-sizing: border-box;
+                box-shadow: none;
+    
+                border-left: 1px solid #ccc;
+                border-right: 1px solid #ccc;
+            }
+        }
+    
+        .bottom-btns {
+            position: relative;
+            box-sizing: border-box;
+            border-bottom: 1px solid #ccc;
+            border-left: 1px solid #CCC;
+            border-right: 1px solid #CCC;
+    
+            font-size: 0;
+            line-height: 36px;
+            height: 36px;
+    
+            > span, .msg {
+                cursor: pointer;
+                display: inline-block;
+                font-size: 18px;
+                padding: 0 .5em;
+                border-right: 1px solid #ccc;
+            }
+    
+            .msg {
+                position: absolute;
+                right: 0;
+                border: none;
+                font-size: 14px;
+                line-height: 40px;
+            }
+        }
+    }
 
-        .msg {
-            position: absolute;
-            right: 0;
-            border: none;
-            font-size: 14px;
-            line-height: 40px;
+    .perm-err {
+        padding: 5em 0;
+        text-align: center;
+        font-size: 24px;
+
+        span {
+            font-size: 300%;
+            margin: .2em 0;
+            display: block;
         }
     }
 }
+
