--- a/src/Pages/Home/Group/group.less
+++ b/src/Pages/Home/Group/group.less
@@ -9,12 +9,13 @@
     ._lr {
         display: flex;
         justify-content: space-between;
-        .l {
-            width: 70%;
-        }
+
+        // .l {
+        //     width: 70%;
+        // }
 
         .r {
-            width: 30%;
+            width: 300px;
             margin-top: 32px;
         }
     }
