--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -1,6 +1,7 @@
 .edit-page {
     .edit-main {
         color: #555;
+        background-color: rgb(240, 240, 240);
         padding-top: 80px;
         position: absolute;
         top: 0;
@@ -11,12 +12,13 @@
         
         // padding-top: 100px;
     
-        > * {
+        .edit-main-inner {
             display: block;
             margin: 0 auto;
             width: 500px;
-    
-            
+            background: #FFF;
+            box-shadow: 
+                0px 2px 14px -4px rgba(0, 0, 0, 0.5);
         }
     
         #my-text-area {
@@ -29,13 +31,21 @@
                 padding: 12px 14px;
                 font-size: 24px;
                 width: 100%;
-                border-top: none;
-                border-bottom: none;
+                // border-top: none;
+                // border-bottom: none;
                 box-sizing: border-box;
                 box-shadow: none;
     
-                border-left: 1px solid #ccc;
-                border-right: 1px solid #ccc;
+                // border-left: 1px solid #ccc;
+                // border-right: 1px solid #ccc;
+                border: none;
+                box-sizing: border-box;
+                outline: none;
+            }
+
+            ._disable {
+                background: #EEE;
+                cursor: help;
             }
         }
     
@@ -43,8 +53,8 @@
             position: relative;
             box-sizing: border-box;
             border-bottom: 1px solid #ccc;
-            border-left: 1px solid #CCC;
-            border-right: 1px solid #CCC;
+            // border-left: 1px solid #CCC;
+            // border-right: 1px solid #CCC;
     
             font-size: 0;
             line-height: 36px;
@@ -55,7 +65,7 @@
                 display: inline-block;
                 font-size: 18px;
                 padding: 0 .5em;
-                border-right: 1px solid #ccc;
+                // border-right: 1px solid #ccc;
             }
     
             .msg {
@@ -78,6 +88,18 @@
             margin: .2em 0;
             display: block;
         }
+    }
+
+
+    .ql-container.ql-snow {
+        border: none;
+        border-top: 1px solid #DDD;
+        border-bottom: 1px solid #DDD;
+    }
+
+    .ql-toolbar.ql-snow {
+        border: none;
+        border-bottom: 1px solid #DDD;
     }
 }
 
