--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -2,8 +2,9 @@
     .edit-main {
         color: #555;
         background-color: rgb(240, 240, 240);
-        padding-top: 80px;
-        position: absolute;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        // position: absolute;
         top: 0;
         left: 0;
         width: 100%;
@@ -15,6 +16,7 @@
         .edit-main-inner {
             display: block;
             margin: 0 auto;
+            padding: 20px 80px;
             width: 500px;
             background: #FFF;
             box-shadow: 
@@ -52,7 +54,7 @@
         .bottom-btns {
             position: relative;
             box-sizing: border-box;
-            border-bottom: 1px solid #ccc;
+            // border-bottom: 1px solid #ccc;
             // border-left: 1px solid #CCC;
             // border-right: 1px solid #CCC;
     
@@ -100,6 +102,18 @@
     .ql-toolbar.ql-snow {
         border: none;
         border-bottom: 1px solid #DDD;
+    }
+
+    .editor-comment {
+        position: relative;
+
+        ._comment-btn {
+            // line-height: 0;
+            position: absolute;
+            left: 100%;
+            transform: translate(4px, -50%);
+            cursor: pointer;
+        }
     }
 }
 
