--- a/src/components/HoverHandler/hover-handler.less
+++ b/src/components/HoverHandler/hover-handler.less
@@ -1,4 +1,4 @@
-.hover-info-main {
+.hover-handler-main {
     position: relative;
 
     &:hover {
@@ -16,7 +16,9 @@
         display: none;
 
         .hover-info-main {
+            text-align: center;
             border-radius: 2px;
+            min-width: 40px;
             padding: 2px 4px;
             border: 2px;
             font-size: 14px;
