--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -10,17 +10,22 @@
         width: 100%;
         height: 100%;
         box-sizing: border-box;
-        
-        // padding-top: 100px;
-    
+
+        @media (max-width: 600px) {
+            padding: 0;
+        }
+           
         .edit-main-inner {
             display: block;
             margin: 0 auto;
             padding: 20px 80px;
-            width: 500px;
+            max-width: 500px;
             background: #FFF;
-            box-shadow: 
-                0px 2px 14px -4px rgba(0, 0, 0, 0.5);
+            box-shadow: 0px 2px 14px -4px rgba(0, 0, 0, 0.5);
+
+            @media (max-width: 600px) {
+                padding: 20px 0px;
+            }
         }
     
         #my-text-area {
