--- a/src/Pages/Home/Group/group.less
+++ b/src/Pages/Home/Group/group.less
@@ -10,9 +10,9 @@
         display: flex;
         justify-content: space-between;
 
-        // .l {
-        //     width: 70%;
-        // }
+        .l {
+            width: 100%;
+        }
 
         .r {
             width: 300px;
