--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -31,7 +31,12 @@
         #my-text-area {
             // padding: 12px 16px;
             height: 400px;
+
+            .ql-editor {
+                line-height: 1.6;
+            }
         }
+
     
         .title-edit {
             input {
