--- a/src/App.less
+++ b/src/App.less
@@ -28,3 +28,16 @@ body {
 a {
     color: inherit;
 }
+
+.font-icon {
+    display: inline-block;
+    svg {
+        width: 100%;
+        height: 100%;
+    }
+    // max-width: 2em;
+    // max-height: 2em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
