--- a/src/components/NavHeader/nav-header.less
+++ b/src/components/NavHeader/nav-header.less
@@ -11,6 +11,13 @@
     }
     .std-padding();
 
+
+    .font-icon {
+        padding-top: 4px;
+        width: 24px;
+        height: 24px;
+    }
+
     line-height: 24px;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .2);
 
@@ -46,6 +53,42 @@
                 border-radius: 2px;
                 width: 100%;
                 height: 100%;
+            }
+        }
+
+        .msg-info {
+            margin-right: 16px;
+            cursor: pointer;
+    
+            &.has-unread {
+                position: relative;
+                &::before {
+                    display: block;
+                    content: "";
+                    width: 4px;
+                    height: 4px;
+                    border-radius: 4px;
+                    background-color: red;
+                    position: absolute;
+                    right: 0px;
+                    top: 2px;
+                }
+                &::after {
+                    opacity: 0;
+                    content: "您有未读消息";
+                    display: block;
+                    position: absolute;
+                    top: 100%;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    width: 100px;
+                    text-align: center;
+                    background: #222;
+                    color: #FFF;
+                }
+                &:hover::after {
+                    opacity: 1;
+                }
             }
         }
     }
