--- a/src/components/GetInputPopup/get-input-popup.less
+++ b/src/components/GetInputPopup/get-input-popup.less
@@ -43,6 +43,10 @@
         }
     }
 
+    .intro-text {
+        margin-bottom: 24px;
+    }
+
     ._btns {
         // text-align: right;
         > ._btn {
