--- a/src/Pages/Home/Doc/doc.less
+++ b/src/Pages/Home/Doc/doc.less
@@ -1,12 +1,45 @@
+.doc-page {
+    position: relative;
+    padding: 32px;
+    height: 100%;
+    box-sizing: border-box;
+    background: #F4F4F4;
+
+    .swicher-keys {
+        @gap: 9px;
+
+        border-bottom: 1px solid #CCC;
+        padding: @gap;
+        margin-bottom: @gap;
+
+        .switcher-item {
+            display: inline-block;
+            margin-right: @gap;
+            cursor: pointer;
+
+            opacity: .5;
+
+            &.active {
+                font-weight: bold;
+                opacity: 1;
+            }
+        }
+    }
+}
+
 .doc-main {
     padding: 12px 16px;
 
     .doc-menu {
-        margin-bottom: 1em;
+        left: 32px;
+        position: absolute;
+        bottom: 0;
+        padding: 32px 0;
 
         .doc-menu-btn {
-            padding-left: 12px;
-            padding-right: 12px;
+            cursor: pointer;
+            width: 100px;                
+            text-align: center;
             font-size: 14px;
             display: inline-block;
         }
@@ -17,4 +50,7 @@
         display: inline-block;
         margin-right: 1em;
     }
+
+    
 }
+
