--- a/src/Pages/Home/Group/group.less
+++ b/src/Pages/Home/Group/group.less
@@ -1,4 +1,7 @@
 .group-main {
+    height: 100%;
+    background: #F4F4F4;
+
     ._title {
         margin-left: 16px;
         margin-top: 32px;
@@ -50,6 +53,8 @@
 
         .member-list {
             ._user-line {
+                display: block;
+                text-decoration: none;
                 line-height: 0;
                 position: relative;
                 box-sizing: border-box;
