--- a/src/Pages/User/user.less
+++ b/src/Pages/User/user.less
@@ -1,7 +1,77 @@
 @import (reference) "../../@ui/index.less";
 
+.group-card-main {
+    padding: 16px;
+    width: 300px;
+    background-color: #FFF;
+    border: 1px solid #BBB;
+
+    .group-card {
+        padding-bottom: 16px;
+        line-height: 25px;
+        display: flex;
+       
+        border-bottom: 1px solid #BBB;
+        
+        .l {
+            width: 50px;
+            height: 50px;
+        }
+
+        .r {
+            padding: 0 10px;
+            text-align: left;
+            width: 250px;
+
+            .group-name {
+                font-weight: bold;
+            }
+            .group-intro {
+                font-size: 80%;
+                opacity: .8;
+            }
+        }
+    }
+
+    .look-detail {
+        display: block;
+        text-decoration: none;
+        padding-top: 16px;
+    }
+}
+
 .user-page-main {
-    
+
+    .user-groups {
+        box-sizing: border-box;
+        width: 244px;
+        margin: 0 auto;
+        // padding: 0 40px;
+        box-sizing: border-box;
+
+
+        text-align: center;
+
+        .no-data {
+            text-align: center;
+            color: #AAA;
+            margin-bottom: 32px;
+        }
+
+        .group-inner {
+            margin: 0 16px;
+            cursor: pointer;
+            // font-size: 0;
+            display: inline-block;
+
+            img {
+                width: 50px;
+                height: 50px;
+                border-radius: 4px;
+            }
+        }
+    }
+
     .user-page-nav {
         font-size: 14px;
         max-width: 600px;
@@ -69,8 +139,9 @@
             }
         }
 
-
         ._intro {
+            border-bottom: 1px solid #BBB;
+            padding-bottom: 24px;
             color: #888;
             text-align: center;
             display: block;
