--- a/src/components/HoverHandler/hover-handler.less
+++ b/src/components/HoverHandler/hover-handler.less
@@ -12,7 +12,7 @@
         position: absolute;
         left: 50%;
         top: 100%;
-        transform: translate(-50%, 6px);
+        transform: translate(-50%, 0);
         display: none;
 
         .hover-info-main {
