--- a/src/@ui/mixins.less
+++ b/src/@ui/mixins.less
@@ -6,10 +6,16 @@
 }
 
 .std-popup-main(@width) {
-    box-shadow: 8px 8px;
+    transition: box-shadow .3s;
+    box-shadow: 8px 8px rgba(0, 0, 0, .3);;
     width: @width;
     background: #FFF;
     padding: 35px 50px;
+
+
+    &:hover {
+        box-shadow: 14px 14px rgba(0, 0, 0, .2);
+    }
 
     h1 {
         position: relative;
