--- a/src/components/WordCard/wordcard.less
+++ b/src/components/WordCard/wordcard.less
@@ -3,4 +3,40 @@
 .word-card-main {
     .std-popup-main(400px);
 
+    h1 {
+        position: relative;
+        
+        ._close {
+            position: absolute;
+            right: 0;
+            top: 0;
+            cursor: pointer;
+            font-size: 120%;
+        }
+    }
+
+
+    .wrods-line {
+        margin-bottom: 1em;
+        
+        .line {
+            display: inline-block;
+            margin-right: .5em;
+        }
+
+        
+    }
+    
+
+    .ql-toolbar.ql-snow {
+        border-left: none;
+        border-right: none;
+    }
+
+    .ql-container.ql-snow {
+        border-left: none;
+        border-right: none;
+        margin-bottom: 1em;
+    }
 }
+
