the common WordCard

--- a/src/@ui/mixins.less
+++ b/src/@ui/mixins.less
@@ -31,6 +31,14 @@
             top: 50%;
             transform: translateY(-50%);
         }
+    
+        ._close {
+            position: absolute;
+            right: 0;
+            top: 0;
+            cursor: pointer;
+            font-size: 120%;
+        }
     }
 
     .std-input {
