--- a/src/@ui/mixins.less
+++ b/src/@ui/mixins.less
@@ -39,6 +39,15 @@
             cursor: pointer;
             font-size: 120%;
         }
+
+        ._msg {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 16px;
+            color: #AAA;
+        }
     }
 
     .std-input {
