--- a/src/components/CoCalendar/co-calendar.less
+++ b/src/components/CoCalendar/co-calendar.less
@@ -3,8 +3,44 @@
 .co-calendar-main {
     .std-popup-main(650px);
 
+
+    position: relative;
+    ._users {
+        position: absolute;
+        right: 50px;
+        bottom: 24px;
+
+        ._user {
+            box-shadow: 2px 2px 0px rgba(0, 0, 0, .3);
+            transition: all .3s;
+            
+            margin-left: 12px;
+            cursor: pointer;
+            display: inline-block;
+            border-radius: 100px;
+
+            
+            width: 32px;
+            height: 32px;
+
+            img {
+                width: 100%;
+                height: 100%;
+                border-radius: 100px;
+            }
+
+            &:hover {
+                box-shadow: 4px 3px 0px rgba(0, 0, 0, .3);
+            }
+        }
+    }
+    .editor-info {
+        padding-top: 12px;
+    }
+
     .co-calendar-inner {
         .day-list-main {
+            margin-bottom: 8px;
             user-select: none;
             position: relative;
 
@@ -39,7 +75,8 @@
             }
 
             .day-list {
-                overflow: hidden;
+                padding-top: 8px;
+                overflow-x: hidden;
                 position: relative;
                 width: 560px;
                 height: 80px;
@@ -49,12 +86,29 @@
                 white-space: nowrap;
                 
                 > div {
+                    box-sizing: border-box;
                     width: 5em;
                     position: absolute;
                     font-size: 16px;
                     display: inline-block;
                     transform: translateX(-50%);
                     transition: all .3s;
+
+                    &.has-record {
+                        &::before {
+                            content: "";
+                            position: absolute;
+                            bottom: 100%;
+                            left: 50%;
+
+                            width: 4px;
+                            height: 4px;
+                            border: 1px solid #A65;
+                            border-radius: 100px;
+
+                            transform: translateX(-50%);
+                        }
+                    }
                 }
 
                 .one-day {
