--- a/src/components/CoCalendar/co-calendar.less
+++ b/src/components/CoCalendar/co-calendar.less
@@ -3,6 +3,12 @@
 .co-calendar-main {
     .std-popup-main(650px);
 
+    h1 {
+        ._calendar {
+            cursor: pointer;
+            margin-left: .8em;
+        }
+    }
 
     position: relative;
     ._users {
@@ -142,7 +148,7 @@
 
     .please-chooose {
         display: flex;
-        height: 255px;
+        height: 270px;
         // padding-bottom: @EDITOR-HEIGHT;
         text-align: center;
         color: #AAA;
