--- a/src/components/HoverHandler/hover-handler.less
+++ b/src/components/HoverHandler/hover-handler.less
@@ -14,6 +14,7 @@
         top: 100%;
         transform: translate(-50%, 0);
         display: none;
+        z-index: 9999;
 
         .hover-info-main {
             text-align: center;
