--- a/src/components/Msg/msg.less
+++ b/src/components/Msg/msg.less
@@ -38,7 +38,6 @@
         min-height: 400px;
     }
 
-
     .no-info {
         position: absolute;
         left: 0;
@@ -46,6 +45,103 @@
         width: 100%;
         text-align: center;
         color: #CCC;
+    }
+
+    .notifications {
+        margin-top: 14px;
+        .one-notification {
+            @PADDING: 12px;
+            border-radius: 6px;
+            padding: 12px;
+            cursor: pointer;
+            position: relative;
+
+            // white-space: nowrap;
+
+            > * {
+                display: inline-block;
+                vertical-align: middle;
+            }
+
+            ._icon {
+                width: 1em;
+                height: 1em;
+                font-size: 24px;
+
+                padding: 12px;
+                background: #555;
+                color: #EEE;
+                border-radius: 4px;
+
+                svg {
+                    width: 100%;
+                    height: 100%;
+                    display: block;
+                }
+
+                
+            }
+            
+            ._text {
+                margin-left: 1em;
+                width: 60%;
+                ._noti {
+                    color: #AAA;
+                }
+
+                ._noti-text {
+                    // white-space: nowrap;
+                    word-wrap: break-word; word-break: normal;
+                }
+            }
+
+            ._to-right {
+                position: absolute;
+                right: @PADDING;
+                top: 50%;
+                font-size: 24px;
+                color: #AAA;
+                transform: translateY(-50%);
+            }
+
+            &.unread {
+                ._noti {
+                    position: relative;
+                    &::after {
+                        margin-left: 4px;
+                        vertical-align: middle;
+                        display: inline-block;
+                        content: "";
+                        width: 4px;
+                        height: 4px;
+                        border: 1px solid #A55;
+                        border-radius: 4px;
+                    }
+
+                    &::before {
+                        content: "这是一条未读消息，点击设为已读";
+                        position: absolute;
+                        font-size: 10px;
+                        opacity: 0;
+                        bottom: 50%;
+                        transition: all .3s;
+                    }
+                }
+            }
+
+            &.unread:hover {
+                ._noti {
+                    &::before {
+                        opacity: 1;
+                        bottom: 100%;
+                    }
+                }                
+            }
+
+            &:hover {
+                background: rgb(244, 244, 244);
+            }
+        }
     }
 }
 
