--- a/src/components/TheCard/the-card.less
+++ b/src/components/TheCard/the-card.less
@@ -1,10 +1,10 @@
-.group-card-main {
+.the-card-main {
     padding: 16px;
     width: 300px;
     background-color: #FFF;
     border: 1px solid #BBB;
 
-    .group-card {
+    .the-card {
         padding-bottom: 16px;
         line-height: 25px;
         display: flex;
@@ -21,10 +21,10 @@
             text-align: left;
             width: 250px;
 
-            .group-name {
+            .the-name {
                 font-weight: bold;
             }
-            .group-intro {
+            .the-intro {
                 font-size: 80%;
                 opacity: .8;
             }
@@ -32,6 +32,7 @@
     }
 
     .look-detail {
+        cursor: pointer;
         display: block;
         text-decoration: none;
         padding-top: 16px;
