--- a/src/Pages/Home/Group/group.less
+++ b/src/Pages/Home/Group/group.less
@@ -133,4 +133,12 @@
             }
         }
     }
+
+
+    .request-permission {
+        display: inline-block;
+        font-size: 14px;
+        margin-top: 16px;
+        padding: 2px 8px;
+    }
 }
