--- a/src/Pages/User/user.less
+++ b/src/Pages/User/user.less
@@ -25,6 +25,19 @@
         width: 65px;
         height: 65px;
         margin-right: 16px;
+        img {
+            border-radius: 4px;
+        }
+    }
+
+    ._username {
+        font-size: 24px;
+        line-height: 35px;
+    }
+
+    ._userintro {
+        color: #888;
+        line-height: 20px;
     }
 
     ._follow_btn {
