--- a/src/Pages/User/user.less
+++ b/src/Pages/User/user.less
@@ -73,7 +73,8 @@
 
         .switcher-item {
             user-select: none;
-            padding: 8px 0;
+            padding-top: 16px;
+            padding-bottom: 8px;
             position: relative;
             cursor: pointer;
             display: inline-block;
