--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -1,4 +1,125 @@
+.lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+
+    div {
+        animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+        transform-origin: 32px 32px;
+
+        &:after {
+            content: " ";
+            display: block;
+            position: absolute;
+            width: 6px;
+            height: 6px;
+            border-radius: 50%;
+            background: #555;
+            margin: -3px 0 0 -3px;
+        }
+
+        &:nth-child(1) {
+            animation-delay: -0.036s;
+        }
+
+        &:nth-child(1):after {
+            top: 50px;
+            left: 50px;
+        }
+    }
+}
+
+.lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+    top: 54px;
+    left: 45px;
+}
+.lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+    top: 57px;
+    left: 39px;
+}
+.lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+    top: 58px;
+    left: 32px;
+}
+.lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+    top: 57px;
+    left: 25px;
+}
+.lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+    top: 54px;
+    left: 19px;
+}
+.lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+    top: 50px;
+    left: 14px;
+}
+.lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+    top: 45px;
+    left: 10px;
+}
+@keyframes lds-roller {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.error-info-main {
+    margin-top: 200px;
+
+    ._btn {
+        font-size: 14px;
+        margin-top: 1em;
+        padding: 2px 10px;
+        display: inline-block;
+    }
+}
+  
+
 .edit-page {
+    .doc-loading {
+        user-select: none;
+        font-size: 64px;
+        padding: 200px 0;
+        width: 100%;
+        text-align: center;
+        align-content: space-between;
+        flex-direction: row-reverse;
+
+        p {
+            margin-top: 12px;
+            font-size: 32px;
+        }
+
+        @keyframes identifier {
+            
+        }
+    }
+
     .edit-main {
         color: #555;
         background-color: rgb(240, 240, 240);
