--- a/src/components/Login/login.less
+++ b/src/components/Login/login.less
@@ -4,6 +4,8 @@
     background: rgb(240, 240, 240);
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
 
     .login-form {
         background: #FFF;
