--- a/src/Pages/Edit/EditHeader/edit-header.less
+++ b/src/Pages/Edit/EditHeader/edit-header.less
@@ -20,6 +20,7 @@
     .logined-list {
         text-align: right;
         > .logined-user {
+            white-space: nowrap;
             vertical-align: middle;
             cursor: pointer;
             width: 24px;
@@ -48,6 +49,10 @@
                 font-size: 14px;
                 box-shadow: 0 1px 3px -2px rgba(0, 0, 0, 0.5);
                 font-size: 14px;
+
+                a {
+                    text-decoration: inherit;
+                }
             }
         }
     }
