--- a/src/Pages/Edit/edit.less
+++ b/src/Pages/Edit/edit.less
@@ -96,6 +96,11 @@
         margin-top: 1em;
         padding: 2px 10px;
         display: inline-block;
+        margin-right: 1em;
+
+        a {
+            text-decoration: inherit;
+        }
     }
 }
   
